welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:10: error: missing arguments for method print in object Predef;
follow this method with `_' if you want to treat it as a partially applied function
  print T
  ^